--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
 					$scope.userList.push(temp);
 				}
 			}
-			$scope.click1 = function(param){
-				alert(JSON.stringify(param));
+			$scope.passedFunction = function(param, index){
+				alert(JSON.stringify(param)+ " "+ index);
+				//alert("Passed Function");
 			};
-			$scope.click2 = function(param){
-				alert(JSON.stringify(param));
-			};
-			$scope.funcList = [$scope.click1, $scope.click2];
 		}]);
 		app.filter('startFrom', function() {
     		return function(input, start) {
@@ -47,54 +44,58 @@
 					selfheaders: "=",
 					sno: "=",
 					pageRange: "=",
-					funcList: "="
+					clickCb: "&"
 				},
-				link: function($scope, elements, attribute){
-					$scope.filteredList = null;
-					$scope.currentPage = 0;
-					$scope.numberOfItemsPerPage = 10;
-					$scope.numberOfPages = 10;
-					$scope.orderByVariable = $scope.headers[0];
-					$scope.orderByAsc = false;
-					$scope.setPageNumber = function(pageNumber){
-						$scope.currentPage = pageNumber-1;
+				link: function(scope, elements, attribute){
+					scope.filteredList = null;
+					scope.currentPage = 0;
+					scope.numberOfItemsPerPage = 10;
+					scope.numberOfPages = 10;
+					scope.orderByVariable = scope.headers[0];
+					scope.orderByAsc = false;
+					scope.setPageNumber = function(pageNumber){
+						scope.currentPage = pageNumber-1;
 					}
-					$scope.range = function(){
+					scope.range = function(){
 						var a = [];
-						for(var i = 1; i<=$scope.numberOfPages; i++)
+						for(var i = 1; i<=scope.numberOfPages; i++)
 							a.push(i);
 						return a;
 					};
-					$scope.decrementPage = function(){
-						if($scope.currentPage>0)
-							$scope.currentPage--;
+					scope.decrementPage = function(){
+						if(scope.currentPage>0)
+							scope.currentPage--;
 					}
-					$scope.incrementPage = function(){
-						if($scope.currentPage<$scope.numberOfPages-1)
-							$scope.currentPage++;
+					scope.incrementPage = function(){
+						if(scope.currentPage<scope.numberOfPages-1)
+							scope.currentPage++;
 					}
-					$scope.initialize = function(){
+					scope.initialize = function(){
 						$timeout(function() {
-							$scope.numberOfPages = Math.ceil($scope.list.length/$scope.numberOfItemsPerPage);
+							scope.numberOfPages = Math.ceil(scope.list.length/scope.numberOfItemsPerPage);
 			    		}, 0);
 					};
-					$scope.$watch('list', function(term){
-						$scope.numberOfPages = Math.ceil($scope.list.length/$scope.numberOfItemsPerPage);
+					scope.clickCbWrapper = function(row, head){
+						scope.clickCb()(row, head);
+					}
+					scope.$watch('list', function(term){
+						scope.numberOfPages = Math.ceil(scope.list.length/scope.numberOfItemsPerPage);
 					}, true);
-					$scope.$watch('search', function(term){
-						$scope.filteredList = (filterFilter($scope.list, term));
-						$scope.numberOfPages = Math.ceil($scope.filteredList.length/$scope.numberOfItemsPerPage);
-						$scope.currentPage = 0;
+					scope.$watch('search', function(term){
+						scope.filteredList = (filterFilter(scope.list, term));
+						scope.numberOfPages = Math.ceil(scope.filteredList.length/scope.numberOfItemsPerPage);
+						scope.currentPage = 0;
 					});
-					$scope.$watch('numberOfItemsPerPage', function(term){
-						$scope.numberOfPages = Math.ceil($scope.filteredList.length/$scope.numberOfItemsPerPage);
-						$scope.currentPage = 0;
+					scope.$watch('numberOfItemsPerPage', function(term){
+						scope.numberOfPages = Math.ceil(scope.filteredList.length/scope.numberOfItemsPerPage);
+						scope.currentPage = 0;
 					});
-					$scope.$watch('orderByVariable2', function(term){
-						$scope.orderByVariable = "\u0022"+$scope.orderByVariable2+"\u0022";
+					scope.$watch('orderByVariable2', function(term){
+						scope.orderByVariable = "\u0022"+scope.orderByVariable2+"\u0022";
 					});
 				},
 				template: [
+					//'<button ng-click = "myclick()">Click for checking</button>',
 					'<div ng-show="filteredList.length" style="width:100%;">',
 						'<select ng-model="numberOfItemsPerPage" >',
 							'<option ng-repeat = "val in pageRange" value = {{val}}>{{val}}</option>',
@@ -119,7 +120,7 @@
 							'<tr>',
 							'<tr ng-repeat = "person in filteredList | orderBy: orderByVariable: orderByAsc | startFrom: (currentPage*numberOfItemsPerPage) | limitTo:numberOfItemsPerPage">',
 								'<td ng-show="sno">{{$index+1+currentPage*numberOfItemsPerPage}}</td>',
-								'<td ng-repeat="attribute in headers" ng-click="funcList[$index](person)">{{person[attribute]}}</td>',
+								'<td ng-repeat="attribute in headers" ng-click="clickCbWrapper(person, attribute)">{{person[attribute]}}</td>',
 							'</tr>',
 						'</table>',
 					'<div>'
@@ -131,6 +132,6 @@
 <body ng-app = "pageApp" ng-controller = "pageCtrl">
 	<input type="text" ng-model="searchText" ng-change="initializeText()" />
 	<button ng-click="generateArray()">Click to get Data</button>
-	<page-table list="userList" headers = "headers" search = "searchText" selfheaders = "selfheaders" sno="true" page-range="pageRange" func-list="funcList"></page-table>
+	<page-table list="userList" headers = "headers" search = "searchText" selfheaders = "selfheaders" sno="true" page-range="pageRange" click-cb="passedFunction"></page-table>
 </body>
 </html>
