sagregated the directive from controller

--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 		<title>Pagination Check</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script type="text/javascript">
+			var app = angular.module("pageApp", []);
+			app.controller("pageCtrl", ["$scope", "$timeout",function($scope, $timeout){
+				$scope.userList = [];
+				$scope.headers = ["0-4", "age"];
+				$scope.selfheaders = ["0-4", "Age"];
+				$scope.pageRange = [10, 50, 100, 200];
+				$scope.generateArray = function(){
+					for(var i = 0; i<100; i++){
+						var temp = {};
+						//$scope.userList.push({name: "Harman"+i, age: Math.floor(Math.random()*100+1)});
+						for(var j = 0; j<$scope.headers.length; j++)
+							temp[$scope.headers[j]] = Math.floor(Math.random()*100+1);
+						$scope.userList.push(temp);
+					}
+				}
+				$scope.passedFunction = function(param, index){
+					alert(JSON.stringify(param)+ " "+ index);
+					//alert("Passed Function");
+				};
+			}]);
+		</script>
 		<script type="text/javascript" src="./app.js"></script>
 	</head>
 	<body ng-app = "pageApp" ng-controller = "pageCtrl">
