--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="./app.js"></script>
 		<script type="text/javascript">
-			var app = angular.module("pageApp", []);
+			var app = angular.module("pageApp", ["page-table"]);
 			app.controller("pageCtrl", ["$scope", "$timeout",function($scope, $timeout){
 				$scope.userList = [];
 				$scope.headers = ["0-4", "age"];
@@ -27,7 +28,6 @@
 				};
 			}]);
 		</script>
-		<script type="text/javascript" src="./app.js"></script>
 	</head>
 	<body ng-app = "pageApp" ng-controller = "pageCtrl">
 		<input type="text" ng-model="searchText" ng-change="initializeText()" />
