--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 	<body ng-app = "pageApp" ng-controller = "pageCtrl">
 		<input type="text" ng-model="searchText" ng-change="initializeText()" />
 		<button ng-click="generateArray()">Click to get Data</button>
-		<page-table list="userList" headers = "headers" search = "searchText" selfheaders = "selfheaders" sno="true" page-range="pageRange" click-cb="passedFunction"></page-table>
+		<page-table list="userList" headers = "headers" search = "searchText" selfheaders = "selfheaders" sno="true" page-range="pageRange" click-cb="passedFunction" initial-sort = "age"></page-table>
 	</body>
 </html>
