--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				$scope.userList = [];
 				$scope.headers = ["0-4", "age"];
 				$scope.selfheaders = ["0-4", "Age"];
-				$scope.pageRange = [10, 50, 100, 200];
+				$scope.pageRange = [10];
 				$scope.generateArray = function(){
 					for(var i = 0; i<100; i++){
 						var temp = {};
